--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
 </div>
 <div class="contents">
   <h2 class="text-small hr-bottom--thin">
-    <i class="icon-crown"></i>CO2排出量<%= image_tag 'co2.jpeg', :size => "80x80" %>
+    <i class="icon-crown"></i>CO<sub>2 </sub>排出量<%= image_tag 'co2.jpeg', :size => "80x80" %>
   </h2>
   <ul class="ranking">
     <% @ranking1.each.with_index(1) do |user, i|  %>
@@ -20,7 +20,7 @@
           <div class="image2" style="background-image: url(<%= user.avatar.url(:medium) %>);"></div>
         <% end %>
         <h3 class="rank">
-          <%= user.name %>　<%= (Kakeibo.where(user_id: user.id).sum(:env_load).round(2)) / user.setai / (Kakeibo.where(user_id: user.id).group(:month).sum(:env_load).count) %>kg/人/月
+          <%= user.name %>　<%= ((Kakeibo.where(user_id: user.id).sum(:env_load)) / user.setai / (Kakeibo.where(user_id: user.id).group(:month).sum(:env_load).count)).round(2) %> kg<sub> /人/月</sub>
         </h3>
       </li>
     <% end %>
@@ -55,7 +55,7 @@
 <hr>
 <div class="contents">
   <h2 class="text-small hr-bottom--thin no-space-bottom">
-    <i class="icon-crown color-gray-light"></i><%= image_tag 'fm2.png', :size => "70x70" %>フードマイレージCO2排出量 <%= image_tag 'fm1.jpeg', :size => "60x60" %>
+    <i class="icon-crown color-gray-light"></i><%= image_tag 'fm2.png', :size => "70x70" %>フードマイレージCO<sub>2 </sub>排出量 <%= image_tag 'fm1.jpeg', :size => "60x60" %>
   </h2>
   <ul class="ranking">
     <% @ranking3.each.with_index(1) do |user, i|  %>
