--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 
 <% if @month.present? %>
 <div class="contents">
-  <h1>今月の二酸化炭素排出量<%= image_tag 'co2.jpeg', :size => "80x80" %></h1>
+  <h1>今月のCO<sub>2 </sub>排出量　<%= image_tag 'co2.jpeg', :size => "80x80" %></h1>
   <div class="env"><h1><%= (@env[@month.month].floor.to_s(:delimited)) %>kg</h1></div>
   <table>
     <caption>環境負荷（CO2排出量）</caption>
@@ -67,16 +67,16 @@
   <h1><%= image_tag 'vw.jpeg', :size => "50x50" %> 今月のバーチャルウォーター量</h1>
   <div class="vw"><h1><%= @meal_vw.round.floor.to_s(:delimited) %> L</h1></div>
   <div class="graph">
-    <h3 id="env">　毎日のバーチャルウォーター量推移（L）</h3>
+    <h3 id="env">　バーチャルウォーター量推移（L）</h3>
       <%= column_chart @vw, height: "500px", width: "450px", colors: ["66FFFF"] %>
   </div>
 </div>
 <hr>
 <div class="contents">
-  <h1>今月のフードマイレージCO2排出量</h1>
+  <h1>今月のフードマイレージ CO<sub>2 </sub>排出量</h1>
   <div class="fm"><h1><%= @meal_fm.round.floor.to_s(:delimited) %> g</h1></div>
   <div class="graph">
-    <h3 id="env">　毎日のフードマイレージCO2排出量推移（g）</h3>
+    <h3 id="env">　フードマイレージ CO<sub>2 </sub>排出量推移（g）</h3>
       <%= column_chart @fm, height: "500px", width: "450px", colors: ["ccCC66"] %>
   </div>
 </div>
