--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,7 +12,7 @@
   <%= f.password_field :password_confirmation, class: 'form-control' %>
 
   <%= f.label :世帯人数（＊ランキングに必要な情報です） %>
-  <%= f.number_field :setai, class: 'form-control', placeholder: "半角の数字" %>
+  <%= f.select :setai, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10] %>
 
   <%= f.label :プロフィール画像 %>
   <%= f.file_field :avatar, class: "form-control floating-label", placeholder: "画像アップロード" %>
