--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -222,6 +222,10 @@ input {
   margin-bottom: 15px;
 }
 
+#user_setai {
+  height: 40px;
+}
+
 #session_remember_me {
   width: auto;
   margin-left: 0;
