--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -65,7 +65,7 @@
 <hr>
 <div class="contents">
   <h1><%= image_tag 'vw.jpeg', :size => "50x50" %> 今月のバーチャルウォーター量</h1>
-  <div class="vw"><h1><%= @meal_vw.round.floor.to_s(:delimited) %> L</h1></div>
+  <div class="vw"><h1><%= @meal_vw.to_f.round.floor.to_s(:delimited) %> L</h1></div>
   <div class="graph">
     <h3 id="env">　日別 バーチャルウォーター量推移（L）</h3>
       <%= column_chart @vw, height: "500px", width: "450px", colors: ["66FFFF"] %>
@@ -74,7 +74,7 @@
 <hr>
 <div class="contents">
   <h1>今月のフードマイレージ CO<sub>2 </sub>排出量</h1>
-  <div class="fm"><h1><%= @meal_fm.round.floor.to_s(:delimited) %> g</h1></div>
+  <div class="fm"><h1><%= @meal_fm.to_f.round.floor.to_s(:delimited) %> g</h1></div>
   <div class="graph">
     <h3 id="env">　日別 フードマイレージ CO<sub>2 </sub>排出量推移（g）</h3>
       <%= column_chart @fm, height: "500px", width: "450px", colors: ["ccCC66"] %>
