--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -689,15 +689,14 @@ h1.ribbon {
     .rank {
       clear: both;
       position: absolute;
-      padding-left: 130px;
+      padding-left: 150px;
       margin-top: -50px;
     }
   }
 }
 
-img.ha {
-  padding-right: 5px;
-  margin-left: -40px;
+img {
+  margin: 5px;
 }
 
 /* syokujidata */
