--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,7 +3,7 @@
   <%= render 'error_messages' %>
 
   <%= f.label :ID：ランキングで登録名が公表されます。実名や他人の名前での登録は控えてください。 %>
-  <%= f.text_field :name, class: 'form-control', placeholder: "３〜７文字程度（半角or全角：Max10文字）" %>
+  <%= f.text_field :name, class: 'form-control', placeholder: "半角or全角：Min２文字, Max７文字" %>
 
   <%= f.label :パスワード %>
   <%= f.password_field :password, class: 'form-control', placeholder: "半角英数字４文字以上" %>
