--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -122,6 +122,7 @@ p {
   position: relative;
 }
 
+
 /*sidebar*/
 
 aside {
@@ -765,3 +766,13 @@ img {
 .low {
   color: #32cd32;
 }
+
+
+/* header sign_up */
+
+.head {
+  font-size: 24px;
+  margin-left: -80px;
+  position: relative;
+}
+
