--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,8 +6,13 @@
     <i class="icon-crown"></i>CO<sub>2 </sub>排出量<%= image_tag 'co2.jpeg', :size => "80x80" %>
   </h2>
   <ul class="ranking">
-    <% @ranking1.each.with_index(1) do |user, i| %>
-    <% unless Kakeibo.where(user_id: user.id).sum(:env_load) == 0 %>
+    <% @users = [] %>
+    <% @ranking1.each do |user| %>
+      <% unless Kakeibo.where(user_id: user.id).sum(:env_load) == 0 %>
+        <% @users << user %>
+      <% end %>
+    <% end %>
+    <% @users.each.with_index(1) do |user, i| %>
       <li>
         <%= i %>位
         <% if user.avatar_file_name.blank? %>
@@ -20,7 +25,6 @@
           <%= (Kakeibo.where(user_id: user.id).sum(:env_load) / (user.setai * Kakeibo.where(user_id: user.id).group(:month).sum(:env_load).count)).round(2) %> kg<sub> /(人・月)</sub>
         </h3>
       </li>
-    <% end %>
     <% end %>
   </ul>
 </div>
