--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -216,7 +216,7 @@ input {
     text-align: center;
     border-radius: 3px;
     display: inline-block;
-    margin-top: 10px;
+    margin-top: 40px;
     color: green;
     background-color: white;
     width: 300px;
@@ -225,6 +225,14 @@ input {
     color: lighten($accent, 15%);
     background-color: white;
   }
+}
+
+.kiyaku {
+  margin-bottom: 15px;
+  margin-top: 30px;
+  padding-top: 30px;
+  margin-left: 180px;
+  font-size: 20px;
 }
 
 .checkbox {
