--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -216,7 +216,7 @@ input {
     text-align: center;
     border-radius: 3px;
     display: inline-block;
-    margin-top: 30px;
+    margin-top: 25px;
     color: green;
     background-color: white;
     width: 300px;
@@ -231,7 +231,7 @@ input {
   margin-bottom: 15px;
   margin-top: 30px;
   padding-top: 30px;
-  margin-left: 180px;
+  margin-left: 185px;
   font-size: 20px;
 }
 
@@ -250,6 +250,7 @@ input {
 
 #user_setai {
   height: 40px;
+  margin-bottom: 15px;
 }
 
 #session_remember_me {
