--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,11 +2,11 @@
 
   <%= render 'error_messages' %>
 
-  <%= f.label :ID：ランキングで登録名が公表されます。実名や他人の名前での登録は控えてください。 %>
-  <%= f.text_field :name, class: 'form-control', placeholder: "半角or全角：Min２文字, Max７文字" %>
+  <%= f.label :ＩＤ：ランキングで公表されます。実名での登録は控えてください。 %>
+  <%= f.text_field :name, class: 'form-control', placeholder: "半角or全角：Min４文字, Max８文字" %>
 
   <%= f.label :パスワード %>
-  <%= f.password_field :password, class: 'form-control', placeholder: "半角英数字４文字以上" %>
+  <%= f.password_field :password, class: 'form-control', placeholder: "半角英数字：Min４文字, Max８文字" %>
 
   <%= f.label :パスワード確認 %>
   <%= f.password_field :password_confirmation, class: 'form-control' %>
