--- a/app/views/users/update.html.erb
+++ b/app/views/users/update.html.erb
@@ -3,6 +3,6 @@
     <h3>
       アカウントの更新が完了しました。<br />
     </h3>
-    <a class="btn-primary" href="/users/#{current_user.id}/edit">設定の変更へ戻る</a>
+    <a class="btn-primary" href="/users/#{current_user.id}">ホームに戻る</a>
   </div>
 </div>
