--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,6 +13,7 @@
               <li><%= link_to "ログアウト", logout_path, method: "delete", class: "btn" %></li>
               <li><%= link_to "設定の変更", edit_user_path(current_user), class: "btn" %></li>
               <li><%= link_to "利用規約", sessions_path, class: "btn" %></li>
+              <li><%= link_to "アプリについて", apps_path, class: "btn" %></li>
               <li><% if current_user.admin? && !current_user?(user) %>
                 | <%= link_to 'アカウント削除', user, method: :delete,
                  data: { confirm: "本当にいいですか？" }, class: "btn" %>
