--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,9 @@
 <div class="ribbon-wrap">
   <h1 class="ribbon">ランキング</h1>
 </div>
+  <span>＊ 食事を毎日登録している人ほどランキングの順位が下がるという傾向が見られたため、修正を加えました。<br>
+  ・バーチャルウォーターは、L/<sub>kcal</sub> → ml/<sub>kcal<sup>2</sup></sub><br>
+  ・フードマイレージによるCO<sub>2</sub>排出量は、g/<sub>kcal</sub> → mg/<sub>kcal<sup>2</sup></sub></span>
 <div class="contents">
   <h2 class="text-small hr-bottom--thin">
     <i class="icon-crown"></i>CO<sub>2 </sub>排出量<%= image_tag 'co2.jpeg', :size => "80x80" %>
@@ -32,7 +35,7 @@
 <div class="contents">
   <h2 class="text-small hr-bottom--thin no-space-bottom">
     <i class="icon-crown color-gray-light"></i><%= image_tag 'vw.jpeg', :size => "50x50" %> バーチャルウォーター量
-  </h2><span>＊食事を毎日登録している人ほどランキングの順位が下がるという傾向が見られたため、修正を加えました。(L/<sub>kcal</sub> → ml/<sub>kcal<sup>2</sup></sub>)</span>
+  </h2>
   <ul class="ranking">
     <% @ranking2.each.with_index(1) do |user, i|  %>
       <li>
