--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,10 @@
+<h6>＊ 食事を毎日登録している人ほどランキングの順位が下がるという傾向が見られたため、修正を加えました。<br>
+  ・バーチャルウォーターは、L/<sub>kcal</sub> → ml/<sub>kcal<sup>2</sup></sub><br>
+  ・フードマイレージによるCO<sub>2</sub>排出量は、g/<sub>kcal</sub> → mg/<sub>kcal<sup>2</sup></sub></h6>
+  <h6>＊ また、間違えて入力してしまった情報は、家計簿または食事記録から削除することができます。</h6>
 <div class="ribbon-wrap">
   <h1 class="ribbon">ランキング</h1>
 </div>
-  <h6>＊ 食事を毎日登録している人ほどランキングの順位が下がるという傾向が見られたため、修正を加えました。<br>
-  ・バーチャルウォーターは、L/<sub>kcal</sub> → ml/<sub>kcal<sup>2</sup></sub><br>
-  ・フードマイレージによるCO<sub>2</sub>排出量は、g/<sub>kcal</sub> → mg/<sub>kcal<sup>2</sup></sub></h6>
 <div class="contents">
   <h2 class="text-small hr-bottom--thin">
     <i class="icon-crown"></i>CO<sub>2 </sub>排出量<%= image_tag 'co2.jpeg', :size => "80x80" %>
