--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,12 +4,12 @@
   <h6>＊ 間違えて入力してしまった情報は、家計簿または食事記録から削除することができます。</h6>
 <div class="contents">
   <h2 class="text-small hr-bottom--thin">
-    <i class="icon-crown"></i>CO<sub>2 </sub>排出量<%= image_tag 'co2.jpeg', :size => "80x80" %>
+    <i class="icon-crown"></i>電気のCO<sub>2 </sub>排出量<%= image_tag 'co2.jpeg', :size => "80x80" %>
   </h2>
   <ul class="ranking">
     <% @users = [] %>
     <% @ranking1.each do |user| %>
-      <% unless Kakeibo.where(user_id: user.id).sum(:env_load) == 0 %>
+      <% unless Kakeibo.where(user_id: user.id).sum(:denki_env) == 0 %>
         <% @users << user %>
       <% end %>
     <% end %>
@@ -23,7 +23,61 @@
         <% end %>
         <h3 class="rank">
           <%= user.name %><br>
-          <%= (Kakeibo.where(user_id: user.id).sum(:env_load) / (user.setai * Kakeibo.where(user_id: user.id).group(:month).sum(:env_load).count)).round(2) %> kg<sub> /(人・月)</sub>
+          <%= (Kakeibo.where(user_id: user.id).sum(:denki_env) / (user.setai * Kakeibo.where(user_id: user.id).group(:month).sum(:denki_env).count)).round(2) %> kg<sub> /(人・月)</sub>
+        </h3>
+      </li>
+    <% end %>
+  </ul>
+</div>
+<div class="contents">
+  <h2 class="text-small hr-bottom--thin">
+    <i class="icon-crown"></i>ガスのCO<sub>2 </sub>排出量<%= image_tag 'co2.jpeg', :size => "80x80" %>
+  </h2>
+  <ul class="ranking">
+    <% @users = [] %>
+    <% @ranking2.each do |user| %>
+      <% unless Kakeibo.where(user_id: user.id).sum(:gas_env) == 0 %>
+        <% @users << user %>
+      <% end %>
+    <% end %>
+    <% @users.each.with_index(1) do |user, i| %>
+      <li>
+        <%= i %>位
+        <% if user.avatar_file_name.blank? %>
+          <div class="image2"><%= image_tag 'alt.png', :size => "100x100" %></div>
+        <% else %>
+          <div class="image2" style="background-image: url(<%= user.avatar.url(:medium) %>);"></div>
+        <% end %>
+        <h3 class="rank">
+          <%= user.name %><br>
+          <%= (Kakeibo.where(user_id: user.id).sum(:gas_env) / (user.setai * Kakeibo.where(user_id: user.id).group(:month).sum(:gas_env).count)).round(2) %> kg<sub> /(人・月)</sub>
+        </h3>
+      </li>
+    <% end %>
+  </ul>
+</div>
+<div class="contents">
+  <h2 class="text-small hr-bottom--thin">
+    <i class="icon-crown"></i>水道のCO<sub>2 </sub>排出量<%= image_tag 'co2.jpeg', :size => "80x80" %>
+  </h2>
+  <ul class="ranking">
+    <% @users = [] %>
+    <% @ranking3.each do |user| %>
+      <% unless Kakeibo.where(user_id: user.id).sum(:suidou_env) == 0 %>
+        <% @users << user %>
+      <% end %>
+    <% end %>
+    <% @users.each.with_index(1) do |user, i| %>
+      <li>
+        <%= i %>位
+        <% if user.avatar_file_name.blank? %>
+          <div class="image2"><%= image_tag 'alt.png', :size => "100x100" %></div>
+        <% else %>
+          <div class="image2" style="background-image: url(<%= user.avatar.url(:medium) %>);"></div>
+        <% end %>
+        <h3 class="rank">
+          <%= user.name %><br>
+          <%= (Kakeibo.where(user_id: user.id).sum(:suidou_env) / (user.setai * Kakeibo.where(user_id: user.id).group(:month).sum(:suidou_env).count)).round(2) %> kg<sub> /(人・月)</sub>
         </h3>
       </li>
     <% end %>
@@ -35,7 +89,7 @@
     <i class="icon-crown color-gray-light"></i><%= image_tag 'vw.jpeg', :size => "50x50" %> バーチャルウォーター量
   </h2>
   <ul class="ranking">
-    <% @ranking2.each.with_index(1) do |user, i|  %>
+    <% @ranking4.each.with_index(1) do |user, i|  %>
       <li>
         <%= i %>位
         <% if user.avatar_file_name.blank? %>
@@ -58,7 +112,7 @@
     <i class="icon-crown color-gray-light"></i><%= image_tag 'fm2.png', :size => "70x70" %>フードマイレージCO<sub>2 </sub>排出量 <%= image_tag 'fm1.jpeg', :size => "60x60" %>
   </h2>
   <ul class="ranking">
-    <% @ranking3.each.with_index(1) do |user, i|  %>
+    <% @ranking5.each.with_index(1) do |user, i|  %>
       <li>
         <%= i %>位
         <% if user.avatar_file_name.blank? %>
