--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -644,9 +644,9 @@ header.header {
   }
   li.tab {
     display: inline-block;
-    width: 100px;
-    height: 34px;
-    padding: 10px 10px 5px;
+    width: 110px;
+    height: 45px;
+    padding: 10px;
     cursor: pointer;
     background-color: #AECD6A;
     border-top-right-radius: 10px;
