--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,3 @@
-
   <!DOCTYPE html>
   <html>
     <head>
@@ -7,6 +6,8 @@
       <%= javascript_include_tag 'https://www.google.com/jsapi', 'https://www.gstatic.com/charts/loader.js', 'application', 'data-turbolinks-track' => true %>
       <%= render 'layouts/shim' %>
       <meta name="viewport" content="width=divice-width, initial-scale=1.0, maximum-scale=0.6667, user-scalable=0;">
+      <meta name="keywords" content="環境負荷記録アプリ, 環境家計簿">
+      <<meta name="description" content="このアプリは電気・ガス・水道の使用量や食事のメニューを選択し登録することで環境負荷（CO2排出量、バーチャルウォータ量）がわかり、記録していくものです。ユーザー間のランキングにより自分がどのくらいの位置にいるのかも確認できます。">
 
       <link href="https://fonts.googleapis.com/earlyaccess/sawarabigothic".css" rel="stylesheet" />
     </head>
