--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,7 +2,7 @@
 
   <%= render 'error_messages' %>
 
-  <%= f.label :ＩＤ：ランキングで公表されます。実名での登録は控えてください。 %>
+  <%= f.label :ユーザーネーム：ランキングで公表されます。 %>
   <%= f.text_field :name, class: 'form-control', placeholder: "半角or全角：Min４文字, Max８文字" %>
 
   <%= f.label :パスワード %>
