--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,5 @@
+<script type="text/javascript" src="https://checkout.pay.jp" class="payjp-button" data-key="<%= PAYJP_PUBLIC_KEY %>"></script>
+
 <title>環境負荷のランキング</title>
 <div class="ribbon-wrap">
   <h1 class="ribbon">ランキング</h1>
