:tada: introduced docker to make it work

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,8 @@
-<script type="text/javascript" src="https://checkout.pay.jp" class="payjp-button" data-key="<%= PAYJP_PUBLIC_KEY %>"></script>
+<%
+=begin%>
+ <script type="text/javascript" src="https://checkout.pay.jp" class="payjp-button" data-key="<%= PAYJP_PUBLIC_KEY %>"></script>
+<%
+=end%>
 
 <title>環境負荷のランキング</title>
 <div class="ribbon-wrap">
